--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "ceqadrat@gmail.com",
   "license": "MIT",
   "dependencies": {
-    "htmlparser2": "^3.9.1"
+    "htmlparser2": "^3.9.1",
+    "utf8": "^2.1.1"
   }
 }
