Add 'co' library instead 'execute' function Add shrinkwrap file

--- a/.gitignore
+++ b/.gitignore
@@ -5,8 +5,6 @@ logs
 *.log
 npm-debug.log*
 
-.idea/*
-
 # Runtime data
 pids
 *.pid
@@ -40,3 +38,4 @@ jspm_packages
 # Optional REPL history
 .node_repl_history
 
+/.idea/*
